BossBarUtil, ProtocolLib and Lombok
- Create BossBarUtil and refactor Beyonder
- Add ProtocolLib dependency
- Add Lombok dependency, replace getters and setters